<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navMain"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.HomeFragment"
        android:label="@string/Home_Title"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.SearchFragment"
        android:label="@string/Search_Title"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.LoginFragment"
        android:label="@string/Login_Title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_userFragment"
            app:destination="@id/userFragment" />

    </fragment>

    <fragment
        android:id="@+id/userFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.UserFragment"
        android:label="@string/User_Title"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/gradFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.GradFragment"
        android:label="@string/Grad_Title"
        tools:layout="@layout/fragment_grad" />

    <fragment
        android:id="@+id/prefFragment"
        android:name="com.pureblacksoft.gradinfo.fragment.PrefFragment"
        android:label="@string/Pref_Title"
        tools:layout="@layout/fragment_pref" />

    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment" />

    <action
        android:id="@+id/action_global_gradFragment"
        app:destination="@id/gradFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

    <action
        android:id="@+id/action_global_prefFragment"
        app:destination="@id/prefFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

</navigation>