<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/PureDialog.Linear"
    android:padding="@dimen/App_Padding_M"
    tools:context=".dialog.CriteriaDialog">

    <TextView
        style="@style/PureDialog.Text.Title"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Criteria_Title" />

    <TextView
        android:id="@+id/txtNameCD"
        style="@style/PureButton.Text.Selectable"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Criteria_Name" />

    <TextView
        android:id="@+id/txtNumberCD"
        style="@style/PureButton.Text.Selectable"
        android:layout_marginBottom="@dimen/App_Margin_S"
        android:text="@string/Criteria_Number" />

</LinearLayout>